// Copyright 2026 Yellowbrick Data, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package ai.floedb.floecat.catalog;

option java_multiple_files = true;
option java_package = "ai.floedb.floecat.catalog.rpc";

import "floecat/common/common.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";

// ----- VIEW -----

message View {
  ai.floedb.floecat.common.ResourceId resource_id = 1;
  ai.floedb.floecat.common.ResourceId catalog_id = 2;
  ai.floedb.floecat.common.ResourceId namespace_id = 3;
  string display_name = 4;
  optional string description = 5;
  string sql = 6;
  google.protobuf.Timestamp created_at = 7;
  map<string,string> properties = 99;
}

message ListViewsRequest {
  ai.floedb.floecat.common.ResourceId namespace_id = 1;
  ai.floedb.floecat.common.PageRequest page = 2;
}
message ListViewsResponse {
  repeated View views = 1;
  ai.floedb.floecat.common.PageResponse page = 2;
}

message GetViewRequest {
  ai.floedb.floecat.common.ResourceId view_id = 1;
}
message GetViewResponse {
  View view = 1;
}

message ViewSpec {
  ai.floedb.floecat.common.ResourceId catalog_id = 1;
  ai.floedb.floecat.common.ResourceId namespace_id = 2;
  optional string display_name = 3;
  optional string description = 4;
  optional string sql = 5;
  map<string,string> properties = 99;
}

message CreateViewRequest {
  ViewSpec spec = 1;
  ai.floedb.floecat.common.IdempotencyKey idempotency = 2;
}
message CreateViewResponse {
  View view = 1;
  ai.floedb.floecat.common.MutationMeta meta = 2;
}

message UpdateViewRequest {
  ai.floedb.floecat.common.ResourceId view_id = 1;
  ViewSpec spec = 2;
  ai.floedb.floecat.common.Precondition precondition = 3;
  google.protobuf.FieldMask update_mask = 4;
}
message UpdateViewResponse {
  View view = 1;
  ai.floedb.floecat.common.MutationMeta meta = 2;
}

message DeleteViewRequest {
  ai.floedb.floecat.common.ResourceId view_id = 1;
  ai.floedb.floecat.common.Precondition precondition = 4;
}
message DeleteViewResponse {
  ai.floedb.floecat.common.MutationMeta meta = 1;
}

// ----- Services -----

service ViewService {
  rpc ListViews(ListViewsRequest) returns (ListViewsResponse);
  rpc GetView(GetViewRequest) returns (GetViewResponse);
  rpc CreateView(CreateViewRequest) returns (CreateViewResponse);
  rpc UpdateView(UpdateViewRequest) returns (UpdateViewResponse);
  rpc DeleteView(DeleteViewRequest) returns (DeleteViewResponse);
}
